Use quarkus-mcp-server PromptMessage and personas (#200)
Signed-off-by: David Kornel <kornys@outlook.com>